# QuickImageViewer

./: .gitignore  AppMain.cpp  AppState.h  CMakeLists.txt  Constants.h  DpiAwareInit.cpp  DpiAwareInit.h  DropTarget.cpp  FileHandler.cpp  FileHandler.h  HelpWindow.cpp  HelpWindow.h  MouseHandler.cpp  MouseHandler.h  README.md  RegistrySetup.cpp  Renderer.cpp  Renderer.h  WicDecoder.cpp  WorkerThread.h  app.manifest  archive_QIV.bat.lnk  archive_QIV_src_no_split.bat  archive_QIV_src_split_10_files.bat  main.cpp  mouseHandler.cpp
Renderer/: IRenderer.h  RendererD2D.cpp  RendererD2D.h  RendererGDI.cpp  RendererGDI.h
resources/: CONTRIBUTING.md  README.md  archive_QIV.bat  infoAndTasks  resource.rc
src/: AppMain.cpp  AppState.h  Constants.h  DriveInfo.cpp  DriveInfo.h  DropTarget.cpp  DropTarget.h  MouseHandler.cpp  MouseHandler.h  SvgDecoder.cpp  SvgDecoder.h  WicDecoder.cpp  WicDecoder.h  WorkerThread.h
src/Cache/: ImageCache.cpp  ImageCache.h
src/Input/: Command.h  CommandExecuter.cpp  CommandResolver.cpp  MouseHandler.cpp  MouseHandler.h
src/Platform/: Constants.h  DpiAwareInit.cpp  FileHandler.cpp  FileHandler.h  MouseHandler.cpp  MouseHandler.h  RegistrySetup.cpp  RegistrySetup.h  Shortcuts.h
src/Renderer/: IRenderer.h  RendererD2D.cpp  RendererD2D.h  RendererGDI.cpp  RendererGDI.h
src/UI/: CacheWindow.cpp  CacheWindow.h  HelpWindow.cpp  OverlayText.cpp  OverlayText.h
